--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "MiddleButtonScroll",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Adds smooth scrolling for the middle button auto-scroll and improves the UI.",
   "icons": { 
     "128": "icon128.png",
@@ -13,5 +13,6 @@
       "js": ["panscroll.js"],
       "run_at": "document_start"
     }
-  ]
+  ],
+  "minimum_chrome_version": "5.0.0.0"
 }
