--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "MiddleButtonScroll",
-  "version": "1.0.8",
+  "manifest_version": 2,
+  "version": "1.1.1",
   "description": "Adds smooth scrolling for the middle button auto-scroll and improves the UI.",
   "icons": { 
     "128": "icon128.png",
